# brisk

./: .gitattributes  .gitignore  .npmignore  LICENSE  README.md  Readme.md  azure-pipelines.yml  dune  dune-project  esy.json  esy.lock.json  esyi.lock.json  jbuild-ignore  jbuild-workspace  package.json  react_ios-ios.install  react_ios.install  react_ios.opam
.ci/: esy-build-steps.yml  pipelines.yml  publish-build-cache.yml  restore-build-cache.yml  use-node.yml
.circleci/: config.yml
BRTesterMac/: .gitignore  dune  jbuild-ignore
BRTesterMac/lib/: CocoaMenu.re  NSMenu_stubs.c  NSMenu_stubs.h  brisk_cocoa_menu.h  dune
BRTesterMac/mac/: Makefile  default.profraw  project.yml
BRTesterMac/mac/Sources/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
BRTesterMac/mac/Tests/: BriskTests.m
BRTesterMac/src/: Menu.re  app.re  dune  jbuild
OCaml/OCaml/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
OCaml/OCaml.xcodeproj/: project.pbxproj
OCaml/OCaml.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OCaml/OCaml/Base.lproj/: Main.storyboard
ReactMini/: README.md
branding-assets/: brisk final.ai
core/: dune-project  esy.json
core/esy.lock/: index.json
core/lib/: Brisk_core.re  Color0.re  Hooks.re  Hooks.rei  Layout.re  ListTR.re  ReactCore.rei  ReactCore_Internal.re  RemoteAction.re  RemoteAction.rei  Slots.re  Slots.rei  dune  jbuild
core/test/: Assert.re  Components.re  Test.re  TestComponents.re  TestPrinter.re  TestReactCore.re  TestRenderer.re  dune  jbuild
esy.lock/: index.json
esy.lock/opam/alcotest.0.8.4/: opam
esy.lock/opam/alcotest.0.8.5/: opam
esy.lock/opam/base64.2.3.0/: opam
esy.lock/opam/cohttp-lwt.1.2.0/: opam
esy.lock/opam/cohttp.1.2.0/: opam
esy.lock/opam/conduit-lwt-unix.1.3.0/: opam
esy.lock/opam/conduit-lwt-unix.1.4.0/: opam
esy.lock/opam/conduit-lwt.1.3.0/: opam
esy.lock/opam/conduit-lwt.1.4.0/: opam
esy.lock/opam/conduit.1.3.0/: opam
esy.lock/opam/cpuid.0.1.1/: opam
esy.lock/opam/ctypes-foreign.0.4.0/: opam
esy.lock/opam/ctypes.0.14.0/: opam
esy.lock/opam/integers.0.2.2/: opam
esy.lock/opam/ipaddr.2.9.0/: opam
esy.lock/opam/ipaddr.3.0.0/: opam
esy.lock/opam/macaddr.3.0.0/: opam
esy.lock/opam/patience_diff.v0.11.0/: opam
esy.lock/opam/ppx_cstruct.3.3.0/: opam
esy.lock/opam/uri.2.2.0/: opam
esy.lock/overrides/opam__s__conf_gmp_opam__c__1_opam_override/: package.json
examples/components-macos/: .editorconfig  .gitignore  .prettierrc  dune-project  esy.json
examples/components-macos/app/: dune  project.yml
examples/components-macos/esy.lock/: index.json
examples/hacker-news/: .gitattributes  .gitignore  dune-project  esy.json  graphql_schema.json  update_schema.sh
examples/hacker-news/app/: Makefile  MenuBar.re  Navigation.re  Paging.re  RunLoop.re  Stories.re  Story.re  StoryDetails.re  StoryList.re  TopStories.re  app.re  dune  graphQLClient.re  graphQLClient.rei  project.yml
examples/hacker-news/app/BriskComponentsMacos.xcodeproj/: project.pbxproj
examples/hacker-news/app/Resources/: Info.plist  env.xcconfig
renderer/: dune-project  esy.json
renderer-macos/: .clang-format  dune-project  esy.json
renderer-macos/esy.lock/: index.json
renderer-macos/lib/: Brisk.re  Brisk_macos.re  Cocoa.re  CocoaMenu.re  Layout.re  RunLoop.re  RunLoop.rei  Styles.re  UIRunner.re  UIRunner.rei  dune
renderer-macos/lib/bindings/: BriskApplication.re  BriskButton.re  BriskClickable.re  BriskCoreFoundation.re  BriskEffectView.re  BriskImage.re  BriskImageHostingView.re  BriskMenu.re  BriskProgressIndicator.re  BriskScrollView.re  BriskSegmentedControl.re  BriskSplitView.re  BriskStylableText.re  BriskTextInput.re  BriskTextView.re  BriskToolbar.re  BriskView.re  BriskWindow.re  CocoaClass.re  CocoaTypes.re  GCD.re  LwtFakeIOEvent.re  NSApplication.re  NSMenu.re  NSView.re  NSWindow.re  UIEventCallback.re  UIEventCallback.rei
renderer-macos/lib/components/: ActivityIndicator.re  Button.re  Clickable.re  EffectView.re  Image.re  Menu.re  Menu.rei  ScrollView.re  SegmentedControl.re  SplitView.re  Text.re  TextInput.re  Toolbar.re  View.re
renderer-macos/lib/stubs/: BriskApplication.c  BriskApplicationDelegate.c  BriskApplicationDelegate.h  BriskButton.c  BriskButton.h  BriskClickable.c  BriskCocoa.c  BriskCocoa.h  BriskCoreFoundation.c  BriskEffectView.c  BriskImage.c  BriskImage.h  BriskImageHostingView.c  BriskImageHostingView.h  BriskMenu.c  BriskProgressIndicator.c  BriskScrollView.c  BriskSegmentedControl.c  BriskSplitView.c  BriskStylableText.c  BriskStylableText.h  BriskTextInput.c  BriskTextInput.h  BriskTextView.c  BriskTextView.h  BriskToolbar.c  BriskToolbar.h  BriskView.c  BriskView.h  BriskViewable.c  BriskViewable.h  BriskWindow.c  BriskWindowDelegate.c  BriskWindowDelegate.h  Cocoa_helpers_stubs.c  Cocoa_helpers_stubs.h  Cocoa_stubs.c  Cocoa_stubs.h  GCD.c  NSButton_stubs.c  (+10 more)
renderer-macos/test/: Test.re  TestFramework.re  dune
renderer/lib/: Color0.re  Layout.re  Style.re  dune
renderer_cocoa/lib/: Cocoa.amli  Cocoa.ml  Cocoa.re  Cocoa_stubs.c  Layout.re  Makefile  React.re  React_Components.re  brisk_cocoa.h  dune  jbuild  project.yml
renderer_cocoa/lib/components/: Button.re  View.re
renderer_cocoa/lib/stubs/: BriskWindowDelegate.c  Cocoa_stubs.c  NSButton_stubs.c  NSButton_stubs.h  NSView_stubs.c  NSView_stubs.h  brisk_cocoa.h  brisk_cocoa_button.h  brisk_cocoa_view.h
renderer_cocoa/test/: Test.re  dune  jbuild
renderer_term/lib/: dune  jbuild
renderer_term/test/: Test.re  dune  jbuild
src/: FloatEncoding.re  LayoutPrint.re  LayoutSupport.re  LayoutTypes.re  Main.re  React.re  React.rei  ReactCore.re  ReactCore.rei  ReactCore_Internal.re  jbuild
src/flex/: FixedEncoding.re  Layout.re  jbuild
src/lib/: HardCodedEncoding.re  React.re  ReactCore.rei  ReactCore_Internal.re  Spec.re  jbuild
test/: Assert.re  Components.re  ReasonReact.re  RunTests.re  Test.re  TestComponents.re  TestPrinter.re  TestReactCore.re  TestRenderer.re  jbuild
tester-macos/: dune-project  esy.json
tester-macos/app/: Makefile  project.yml
(+68 files in other folders)
