(copy_files stubs/*)
(copy_files bindings/*)
(copy_files components/*)

(library
 (name brisk_macos)
 (public_name brisk-macos)
 (synopsis "Cocoa renderer and bindings")
 (libraries brisk-core brisk-reconciler lwt.unix)
 (install_c_headers BriskCocoa
                    BriskApplicationDelegate
                    BriskWindowDelegate
                    BriskStylableText
                    )
 (c_names BriskCocoa
          BriskApplication BriskApplicationDelegate
          BriskWindow BriskWindowDelegate
          BriskMenu
          BriskView
          BriskScrollView
          BriskStylableText
          BriskTextView
          BriskImage
          BriskButton
          BriskClickable
          GCD
          BriskEffectView
          BriskSegmentedControl
          BriskToolbar
          BriskViewable
          )
 (c_flags (:standard
          -Wextra -Wall -Werror -O -g -std=c99 -pedantic-errors -Wsign-compare -Wshadow
          -Wno-unguarded-availability-new
          -mmacosx-version-min=10.10
          -x objective-c)))
